--- a/index.html
+++ b/index.html
@@ -1,170 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<title>Dodging</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<style>
-		/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-		.row.content {
-			height: 1500px
-		}
-
-		/* Set gray background color and 100% height */
-		.sidenav {
-			background-color: #f1f1f1;
-			height: 100%;
-		}
-
-		ul.nav-pills {
-			top: auto;
-			position: fixed;
-		}
-
-		/* Set black background color, white text and some padding */
-		footer {
-			background-color: #555;
-			color: white;
-			padding: 15px;
-		}
-
-		/* On small screens, set height to 'auto' for sidenav and grid */
-		@media screen and (max-width: 767px) {
-			.sidenav {
-				height: auto;
-				padding: 15px;
-			}
-
-			.row.content {
-				height: auto;
-			}
-		}
-	</style>
-</head>
-
-<body data-spy="scroll" data-target="#myScrollspy" data-offset="200">
-	<br>
-	<div class="container-fluid text-center">
-		<h1>Should I dodge the game ?<h1>
-	</div>
-	<br>
-	<div class="container-fluid">
-		<div class="row">
-			<nav class="col-sm-2" id="myScrollspy">
-				<div class="well">
-					<img style="width: 100%;" alt="Github" title="Github" src="https://avatars2.githubusercontent.com/u/52131891?s=460&u=6071a04fa37bc08a7af3b998b5e198b7e4c1e3a9&v=4">
-					<br>
-					<a type="button" class="btn btn-primary btn-block" href="https://github.com/ImNotEvil">Github</a>
-
-				</div>
-				<ul class="nav nav-pills nav-stacked">
-					<li><a href="#">Github</a></li>
-					<li class="active"><a href="#section1">Dodge ?</a></li>
-					<li><a href="#section2">Add players</a></li>
-					<li><a href="#section3">History</a></li>
-				</ul>
-			</nav>
-
-			<div class="col-sm-10">
-				<div id="section1" class="panel panel-primary">
-					<div class="panel-heading">
-						<h1>Dodge ?</h1>
-					</div>
-					<div class="panel-body">
-						<h3>To decide if you should dodge or not put the name of the other players here and see if you played with them before or not<h3>
-								<h4 class="alert alert-danger alert-dismissible"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>Your username is needed</h4>
-								<div class="input-group">
-									<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-									<input id="player_username" type="text" class="form-control" placeholder="Your username">
-								</div>
-								<br>
-								<div class="col-sm-12">
-									<div class="col-sm-4">
-										<label>Lobby players raw input:</label>
-										<textarea class="form-control" rows="5" id="comment" placeholder="ROX Smeb joined the room.
-ROX Peanut joined the room.
-ROX Kuro joined the room.
-ROX PraY joined the room.
-ROX GorillA joined the room."></textarea>
-										<br>
-									</div>
-									<div class="col-sm-8">
-										<label>Lobby players :</label>
-										<div class="input-group">
-											<span class="input-group-addon">Player 1</span>
-											<input id="teammate1" type="text" class="form-control" placeholder="Teammate 1 username">
-										</div>
-										<div class="input-group">
-											<span class="input-group-addon">Player 2</span>
-											<input id="teammate2" type="text" class="form-control" placeholder="Teammate 2 username">
-										</div>
-										<div class="input-group">
-											<span class="input-group-addon">Player 3</span>
-											<input id="teammate3" type="text" class="form-control" placeholder="Teammate 3 username">
-										</div>
-										<div class="input-group">
-											<span class="input-group-addon">Player 4</span>
-											<input id="teammate4" type="text" class="form-control" placeholder="Teammate 4 username">
-										</div>
-										<br>
-									</div>
-								</div>
-					</div>
-				</div>
-				<hr id="section2">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h1>Add players</h1>
-					</div>
-					<div class="panel-body">
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."</h2>
-					</div>
-				</div>
-				<hr id="section3">
-				<div class="panel panel-primary">
-					<div class="panel-heading">
-						<h1>History</h1>
-					</div>
-					<div class="panel-body">
-						<h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-							laborum."
-						</h2>
-					</div>
-				</div>
-				<hr>
-			</div>
-		</div>
-	</div>
-
-	<footer class="container-fluid">
-		<p>Footer Text</p>
-	</footer>
-
-</body>
-
+   <head>
+      <title>Dodging</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+      <style>
+         /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+         .row.content {
+         height: 1500px
+         }
+         /* Set gray background color and 100% height */
+         .sidenav {
+         background-color: #f1f1f1;
+         height: 100%;
+         }
+         ul.nav-pills {
+         top: auto;
+         position: fixed;
+         }
+         /* Set black background color, white text and some padding */
+         footer {
+         background-color: #555;
+         color: white;
+         padding: 15px;
+         }
+         /* On small screens, set height to 'auto' for sidenav and grid */
+         @media screen and (max-width: 767px) {
+         .sidenav {
+         height: auto;
+         padding: 15px;
+         }
+         .row.content {
+         height: auto;
+         }
+         }
+      </style>
+   </head>
+   <body data-spy="scroll" data-target="#myScrollspy" data-offset="200">
+      <br>
+      <div class="container-fluid text-center">
+         <h1>
+         Should I dodge the game ?
+         <h1>
+      </div>
+      <br>
+      <div class="container-fluid">
+         <div class="row">
+            <nav class="col-sm-2" id="myScrollspy">
+               <div class="well">
+                  <img style="width: 100%;" alt="Github" title="Github" src="https://avatars2.githubusercontent.com/u/52131891?s=460&u=6071a04fa37bc08a7af3b998b5e198b7e4c1e3a9&v=4">
+                  <br>
+                  <a type="button" class="btn btn-primary btn-block" href="https://github.com/ImNotEvil">Github</a>
+               </div>
+               <ul class="nav nav-pills nav-stacked">
+                  <li><a href="#">Github</a></li>
+                  <li class="active"><a href="#section1">Dodge ?</a></li>
+                  <li><a href="#section2">Add players</a></li>
+                  <li><a href="#section3">History</a></li>
+               </ul>
+            </nav>
+            <div class="col-sm-10">
+               <div id="section1" class="panel panel-primary">
+                  <div class="panel-heading">
+                     <h1>Dodge ?</h1>
+                  </div>
+                  <div class="panel-body">
+                     <h3>
+                     To decide if you should dodge or not put the name of the other players here and see if you played with them before or not
+                     <h3>
+                     <h4 class="alert alert-danger alert-dismissible"><a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>Your username is needed</h4>
+                     <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <input id="player_username" type="text" class="form-control" placeholder="Your username">
+                     </div>
+                     <br>
+                     <div class="col-sm-12">
+                        <div class="col-sm-4">
+                           <label>Lobby players raw input:</label>
+                           <textarea class="form-control" rows="5" id="comment" placeholder="ROX Smeb joined the room.
+                              ROX Peanut joined the room.
+                              ROX Kuro joined the room.
+                              ROX PraY joined the room.
+                              ROX GorillA joined the room."></textarea>
+                           <br>
+                        </div>
+                        <div class="col-sm-8">
+                           <label>Lobby players :</label>
+                           <div class="input-group">
+                              <span class="input-group-addon">Player 1</span>
+                              <input id="teammate1" type="text" class="form-control" placeholder="Teammate 1 username">
+                           </div>
+                           <div class="input-group">
+                              <span class="input-group-addon">Player 2</span>
+                              <input id="teammate2" type="text" class="form-control" placeholder="Teammate 2 username">
+                           </div>
+                           <div class="input-group">
+                              <span class="input-group-addon">Player 3</span>
+                              <input id="teammate3" type="text" class="form-control" placeholder="Teammate 3 username">
+                           </div>
+                           <div class="input-group">
+                              <span class="input-group-addon">Player 4</span>
+                              <input id="teammate4" type="text" class="form-control" placeholder="Teammate 4 username">
+                           </div>
+                           <br>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <hr id="section2">
+               <div class="panel panel-primary">
+                  <div class="panel-heading">
+                     <h1>Add players</h1>
+                  </div>
+                  <div class="panel-body">
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                  </div>
+               </div>
+               <hr id="section3">
+               <div class="panel panel-primary">
+                  <div class="panel-heading">
+                     <h1>History</h1>
+                  </div>
+                  <div class="panel-body">
+                     <h2>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborum."
+                     </h2>
+                  </div>
+               </div>
+               <hr>
+            </div>
+         </div>
+      </div>
+      <footer class="container-fluid">
+         <p>Footer Text</p>
+      </footer>
+   </body>
 </html>
