--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<br>
 	<div class="container-fluid text-center">
 		<h1>
-			Should I dodge the game ?
+			Should I dodge this game ?
 			<h1>
 	</div>
 	<br>
