--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 								<div class="col-sm-12">
 									<div class="col-sm-4">
 										<label>Lobby players raw input:</label>
-										<textarea onchange="save_content('raw_usernames')" name="test" spellcheck="false" class="form-control" rows="5" id="raw_usernames" placeholder="ROX Smeb joined the room.
-ROX Peanut joined the room.
-ROX Kuro joined the room.
-ROX PraY joined the room.
-ROX GorillA joined the room."></textarea>
+										<textarea onchange="save_content('raw_usernames')" name="test" spellcheck="false" class="form-control" rows="5" id="raw_usernames" placeholder="ROX Smeb joined the lobby
+ROX Peanut joined the lobby
+ROX Kuro joined the lobby
+ROX PraY joined the lobby
+ROX GorillA joined the lobby"></textarea>
 										<button type="button" class="btn btn-warning btn-block" onclick="raw_filter()">Parse raw usernames <span class="glyphicon glyphicon-arrow-right"></span></button>
 
 										<br>
